src/tests/snapshots/all_phases__assign_to_expr.snap
---
created: "2019-04-06T05:47:31.841219900Z"
creator: insta@0.7.1
source: src/tests/all_phases.rs
expression: "\n    e |= 0;\n    foo().x |= 1;\n"
---
e = e | 0;
var _obj = foo();
_obj.x = _obj.x | 1;

