src/tests/snapshots/all_phases__basic.snap
---
created: "2019-04-07T06:35:52.624966400Z"
creator: insta@0.7.1
source: src/tests/all_phases.rs
expression: "\n    function f(x) {\n        while (true);\n        x = y.bar;\n        z.foo = x ? true : 'hi';\n        return +[1 || x, { x }, f + 1, ++g];\n    }\n    f(1), true;\n"
---
function f() {
    for(;;){
    }
    var _val = y.bar;
    var _obj = z;
    var _val$1;
    if (_val) {
        _val$1 = true;
    } else {
        _val$1 = 'hi';
    }
    _obj.foo = _val$1;
    var _wri = g + 1;
    g = _wri;
    return +[1, {
            x: _val
        }, f + 1, _wri];
}(1);

