src/tests/snapshots/all_phases__do_not_inline_multi_use.snap
---
created: "2019-04-09T06:24:19.537339200Z"
creator: insta@0.7.1
source: src/tests/all_phases.rs
expression: "\n    const f = () => { foo; };\n    f();\n    f();\n"
---
var _ini = ()=>{
    foo;
};
_ini();
_ini();

