src/tests/snapshots/all_phases__dont_inline_into_loop.snap
---
created: "2019-04-27T22:01:40.350870800Z"
creator: insta@0.7.4
source: src/tests/all_phases.rs
expression: "\n    let x = g;\n    do {\n        log(x);\n        g = 1;\n    } while (foo);\n"
---
var x = g;
for(;;){
    log(x);
    g = 1;
    if (foo) {
    } else {
        break;
    }
}

