src/tests/snapshots/all_phases__fn_hoisting_labelled.snap
---
created: "2019-04-05T14:49:37.633497500Z"
creator: insta@0.7.1
source: src/tests/all_phases.rs
expression: "\n    foo();\n    label:\n    function foo() { foo_; }\n"
---
var foo;
label: {
    foo = function() {
        foo_;
    };
}
foo();

