src/tests/snapshots/all_phases__fn_scopes_do_not_deter_ssa_inlining.snap
---
created: "2019-04-02T21:16:06.787852300Z"
creator: insta@0.7.1
source: src/tests/all_phases.rs
expression: "\n    let x = foo();\n    function f() {\n        something();\n    }\n    g = x;\n    f();\n    f();\n"
---
var _fun = function() {
    something();
};
g = foo();
_fun();
_fun();

